--- a/ui/usetemplate.ui
+++ b/ui/usetemplate.ui
@@ -111,6 +111,19 @@
     <string>Back</string>
    </property>
   </widget>
+  <widget class="QProgressBar" name="progressBar">
+   <property name="geometry">
+    <rect>
+     <x>221</x>
+     <y>370</y>
+     <width>401</width>
+     <height>23</height>
+    </rect>
+   </property>
+   <property name="value">
+    <number>0</number>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
